--- a/research-statement-jro-main-short.tex
+++ b/research-statement-jro-main-short.tex
@@ -172,13 +172,14 @@ Using analyses of simulated and empirical data, I found, as predicted by
 theory, the new method was much more accurate and robust\cref{Oaks14dpp}.
 Applying this new method to the comparative Philippines dataset, I found a
 large amount of uncertainty about the number of divergence events shared across
-the 22 taxa; there simply was not enough information in our data to
-discriminate among models of divergence.
-While this result is more trustworthy and intuitive than what we found
-with the original method, it was empirically unsatisfying.
-Thus, my current work focuses on developing more powerful methods for
-addressing comparative phylogeographical questions that can leverage large NGS
-datasets.
+the 22 taxa.
+% ; there simply was not enough information in our data to
+% discriminate among models of divergence.
+While this result is more intuitive than what we found with the original
+method, it was empirically unsatisfying.
+Thus, my current work focuses on developing more powerful methods that can
+leverage large, comparative NGS datasets for addressing questions about
+diversification.
 
 
 \subsection*{Current Research}
@@ -193,10 +194,9 @@ its development.
 
 % Full likelihood method
 \subsubsection*{Implementing a full-likelihood Bayesian comparative
-    phylogeographic model}
-While the method implemented in dpp-msbayes is more powerful and robust than
-its predecessor, both methods are based on approximate likelihoods and discard
-information when reducing the genetic data to a set of insufficient summary
+    model of diversification}
+Both msBayes and dpp-msbayes are based on approximate likelihoods and discard
+information when reducing genetic data to a set of insufficient summary
 statistics.
 Thus, dpp-msbayes still struggles to discriminate among models of divergence at
 recent evolutionary timescales \footnote{\label{Oaks14dpp}\shortfullcite{Oaks2014dpp}}.
@@ -224,15 +224,15 @@ processes on biodiversity.
 % (2) collecting genome-scale data from dense sampling of \emph{Cyrtodactylus}
 % and \emph{Gekko} from across the Philippine Archipelago using next-generation
 % sequencing technology.
-In addition to developing a full-likelihood Bayesian phylogeographical
-model-choice framework, I have also collected genome-wide sequence data from
-nearly 300 \emph{Cyrtodactylus} and \emph{Gekko} individuals from across the
-Philippine Archipelago using NGS technology.
+In addition to developing a full-likelihood Bayesian framework for inferring
+co-diversification, I have also collected genome-wide sequence data from nearly
+300 individuals of two genera of geckos (\emph{Cyrtodactylus} and \emph{Gekko})
+from across the Philippine Archipelago using NGS technology.
 The combination of the new method and NGS data will allow us to better assess
 the affect of sea-level fluctuations on diversification across oceanic islands
 of Southeast Asia.
 
-As a complement to this work on oceanic islands, I am also working with an
+To complement to this work on oceanic islands, I am also working with an
 international team of collaborators to better understand diversification in
 mainland Southeast Asia.
 My collaborators include
@@ -243,15 +243,11 @@ Kebangsaan Malaysia (UKM),
 Dr.\ Shahrul Anuar Mohd Sah of the Universiti Sains Malaysia (USM),
 and
 Dr.\ Anchalee Aowphol of Kasetsart University.
-Through years of extensive fieldwork, we have collected an impressive
-comparative dataset of reptiles and amphibians from across much of the Sunda
-Shelf.
-Along with additional field collecting, we are currently collecting sequence
-data from many of these taxa.
-We will apply the methods I am developing to test long-standing hypotheses
-about the affect of biogeographical transition zones on the diversification of
-Sunda Shelf biota, including the Isthmus of Kras, and current and paleo river
-systems.
+We are collecting a large comparative dataset of reptiles and amphibians from
+across much of the Sunda Shelf, and will apply the
+methods I am developing to test long-standing hypotheses about the affect of
+biogeographical transition zones on the diversification of Sunda Shelf biota,
+including the Isthmus of Kras, and current and paleo-river systems.
 We plan to seek funding from the NSF Biodiversity Discovery and Analysis
 Program for this project.
 
@@ -267,7 +263,7 @@ Nyamsuren Batsaikhan of the National University of Mongolia) and I were awarded
 a grant from the National Geographic Society to better document and understand
 the history of the unique assemblage of reptiles that inhabit this region.
 Our goal is to collect genomic data from a set of focal sand and rock-adapted
-taxa and use the comparative phylogeographical methods I am developing to
+taxa and use the comparative methods I am developing to
 (1) infer their evolutionary origins,
 (2) test for patterns of shared evolutionary history, and
 (3) identify key processes that led to the diverse and unique fauna of this
@@ -281,7 +277,7 @@ region.
 \subsubsection*{Application of novel methods to understand diversification
 in West-Central African rainforests}
 I am working with Drs.\ Adam Leach\'{e} and Matthew Fujita to apply the novel
-statistical methods described above to comparative phylogeographic NGS datasets
+statistical methods described above to comparative NGS datasets
 to elucidate the historical processes of diversification and community assembly
 across West-Central African rainforests.
 We are particularly interested in determining how Pliocene and Pleistocene
@@ -295,18 +291,18 @@ diversification across the Afro-tropics.
 \subsection*{Future Research}
 %%%%%%%%%%%%%%%
 
-% \subsection*{Theoretical and computational advances in phylogeography}
+% \subsection*{Theoretical and computational advances in phylogenetics}
 % The projects below will result in computational tools that will benefit a broad
 % community of researchers conducting biogeographical analyses. I will seek
 % funding from the NSF Phylogenetic Systematics Program to secure funds for the
 % necessary computational resources to develop, test, and deploy these methods.
 
-\subsubsection*{Extending comparative phylogeographical model choice to a fully
+\subsubsection*{Extending co-diversification model choice to a fully
     phylogenetic framework}
 While the full-likelihood Bayesian method I am currently developing promises to
-greatly improve the accuracy and power of phylogeographical inference, I have
-plans to go even further and integrate the approach into a fully phylogenetic
-framework.
+greatly improve the accuracy and power of inferring shared evolutionary
+history, I have plans to go even further and integrate the approach into a
+fully phylogenetic framework.
 I will do this by implementing a novel hierarchical Bayesian model for
 co-estimating the number and timing of divergence events across a phylogeny,
 and the assignment of the internal nodes in the tree to the events, while
