--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -120,6 +120,7 @@
 \singlespacing
 
 \input{research-statement-jro-main.tex}
+% \input{research-statement-jro-main-short.tex}
 
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
