More work on short and long version of statement.
Minor rewording and reorganizing to future-research section.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -347,15 +347,15 @@ of the Sunda Shelf}
 Scattered across the Sunda Shelf of Southeast Asia, is a network of small
 continental islands that were formally part of the Sunda Peninsula during
 glacial periods.
+Most of the islands were inundated during the last interglacial highstand, and
+subsequently spent the next 100,000 years as part of the exposed Sunda Shelf
+landmass during the Wisconsin glaciation before being isolated by rising sea
+levels $\sim$12,000 years ago.
+
 Many of these islands are merely wind-swept rocky outcrops that, nonetheless,
 support small populations of skinks (\emph{Eutropis multifasciata}) and geckos
 (\emph{Lepidodactylus lugubris}).
-Most of the islands were inundated during the last interglacial highstand, and
-subsequently spent the next 100,000 years as part of the exposed Sunda Shelf
-landmass during the Wisconsin glaciation before being fragmented by rising sea
-levels $\sim$12,000 years ago.
-
-The lizard species inhabiting these islands have interesting biologies.
+% The lizard species inhabiting these islands have interesting biologies.
 \emph{E.\ multifasciata} has occupied a distinct niche from their mainland,
 forest-dwelling counterparts; they subsist off arthropods attracted to the
 debris of nesting colonies of terns.
@@ -372,8 +372,8 @@ across the range of the species; some populations are comprised solely of
 asexual, parthenogenetic females, whereas others are sexual.
 
 The network of minuscule islands distributed across the Sunda Shelf harboring
-small insular populations of co-distributed lizards offers a unique model
-system for studying the 
+small populations of co-distributed lizards offers a unique model system for
+studying the 
 (1) affects of recent, severe fragmentation on historical demography and
 diversification,
 (2) evolution of reproductive mode,
@@ -381,7 +381,7 @@ diversification,
 (4) the interplay between selection and genetic drift in extremely small
 populations under strong selective pressures.
 My collaborators and I will foster this natural model system as part of a
-long-term project to address these questions.
+long-term, multi-stage project to address these questions.
 % My collaborators include
 % Dr. Lee Grismer, Professor of Biology at La Sierra University, and
 % international colleagues
