--- a/research-statement-jro-main-short.tex
+++ b/research-statement-jro-main-short.tex
@@ -342,25 +342,23 @@ of the Sunda Shelf}
 % The extent of terrestrial habitat has fluctuated dramatically throughout the
 % Quaternary glacial cycles (Figure \ref{map}).
 Scattered across the Sunda Shelf of Southeast Asia, is a network of small
-continental islands that were formally part of the Sunda Peninsula during
-glacial periods.
+islands that were formally part of the Sunda Peninsula during glacial periods.
+Most of the islands were inundated during the last interglacial highstand, and
+subsequently spent the next 100,000 years as part of the exposed Sunda Shelf
+landmass during the Wisconsin glaciation before being isolated by rising sea
+levels $\sim$12,000 years ago.
+
 Many of these islands are merely wind-swept rocky outcrops that, nonetheless,
 support small populations of skinks (\emph{Eutropis multifasciata}) and geckos
 (\emph{Lepidodactylus lugubris}).
-Most of the islands were inundated during the last interglacial highstand, and
-subsequently spent the next 100,000 years as part of the exposed Sunda Shelf
-landmass during the Wisconsin glaciation before being fragmented by rising sea
-levels $\sim$12,000 years ago.
-
-The lizard species inhabiting these islands have interesting biologies.
+% The lizard species inhabiting these islands have interesting biologies.
 \emph{E.\ multifasciata} has occupied a distinct niche from their mainland,
 forest-dwelling counterparts; they subsist off arthropods attracted to the
 debris of nesting colonies of terns.
 They also exhibit extreme polymorphisms in color patterns among island
 populations, far exceeding the variation seen on the mainland.
-Furthermore, across its broad range, \emph{E.\ multifasciata} populations vary
-between egg-laying (oviparity) and live-bearing (ovoviviparity) modes of
-reproduction.
+Furthermore, populations of \emph{E.\ multifasciata} vary between egg-laying
+(oviparity) and live-bearing (ovoviviparity) modes of reproduction.
 %\emph{L.\ lugubris} is often restricted to peripheral habitats, such as
 %wind-swept rocky islands, because it is outcompeted by other gecko species in
 %more typical gecko habitats.
@@ -369,8 +367,7 @@ across the range of the species; some populations are comprised solely of
 asexual, parthenogenetic females, whereas others are sexual.
 
 The network of minuscule islands distributed across the Sunda Shelf harboring
-small insular populations of co-distributed lizards offers a unique model
-system for studying the 
+small populations of lizards offers a unique model system for studying the 
 (1) affects of recent, severe fragmentation on historical demography and
 diversification,
 (2) evolution of reproductive mode,
@@ -378,7 +375,7 @@ diversification,
 (4) the interplay between selection and genetic drift in extremely small
 populations under strong selective pressures.
 My collaborators and I will foster this natural model system as part of a
-long-term project to address these questions.
+long-term, multi-stage project to address these questions.
 % My collaborators include
 % Dr. Lee Grismer, Professor of Biology at La Sierra University, and
 % international colleagues
@@ -387,7 +384,6 @@ long-term project to address these questions.
 % Dr. Shahrul Anuar Mohd Sah, Professor of the Biological Sciences at the
 % Universiti Sains Malaysia (USM).
 % We plan to approach different aspects of this study in a series of stages.
-
 For the first stage of this project, we will elucidate the evolutionary context
 of the island populations by inferring their relationships and demographic
 history.
@@ -442,5 +438,5 @@ Are the striking color polymorphisms of \emph{E.\ multifasciata} adaptive?
 % questions at the genetic level in these species.
 We will seek funding for the three stages of this work from the NSF
 Phylogenetic Systematics, Evolutionary Genetics, and Evolutionary Ecology
-Programs, respectively.
+Program.
 
